fix: :bug: fix extend error

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haydenull/fabric",
-  "version": "0.0.1",
+  "version": "0.0.1-dev.5",
   "description": "haydenull's eslint config",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/haydenull/eslint-config#readme",
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "local-pkg": "^0.4.3",
