--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@haydenull/fabric",
-  "version": "0.0.1-dev.5",
+  "version": "0.0.1-dev.13",
   "description": "haydenull's eslint config",
   "main": "index.js",
+  "bin": {
+    "haydenull-fabric": "./cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +28,8 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "chalk": "^4.1.2",
+    "commander": "^11.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -33,5 +38,12 @@
   },
   "peerDependencies": {
     "eslint": ">=7.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "prettier": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
