--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haydenull/fabric",
-  "version": "0.0.1-dev.13",
+  "version": "0.1.0",
   "description": "haydenull's eslint config",
   "main": "index.js",
   "bin": {
