--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "url": "https://github.com/haydenull/eslint-config/issues"
   },
   "homepage": "https://github.com/haydenull/eslint-config#readme",
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
+  },
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -40,6 +45,7 @@
     "eslint": ">=7.4.0"
   },
   "devDependencies": {
+    "cz-git": "^1.7.1",
     "eslint": "^8.45.0",
     "prettier": "^3.0.0"
   },
