--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haydenull/fabric",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "haydenull's eslint config",
   "main": "index.js",
   "bin": {
@@ -24,17 +24,13 @@
     "url": "https://github.com/haydenull/eslint-config/issues"
   },
   "homepage": "https://github.com/haydenull/eslint-config#readme",
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-git"
-    }
-  },
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
+    "czg": "^1.7.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -45,7 +41,6 @@
     "eslint": ">=7.4.0"
   },
   "devDependencies": {
-    "cz-git": "^1.7.1",
     "eslint": "^8.45.0",
     "prettier": "^3.0.0"
   },
