--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haydenull/fabric",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "haydenull's eslint config",
   "main": "index.js",
   "bin": {
@@ -35,6 +35,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "local-pkg": "^0.4.3",
+    "prettier-plugin-classnames": "^0.6.6",
+    "prettier-plugin-merge": "^0.6.0",
     "prettier-plugin-tailwindcss": "^0.4.0"
   },
   "peerDependencies": {
